# graphtb

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: ci-base.yml  formatting.yml
tests/: test_base_graph.py
